--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -31,13 +32,13 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.5",
-    "resend": "^3.2.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "qrcode": "^1.5.4",
+    "resend": "^3.2.0",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0"
   }
